--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,10 +9,13 @@
     "concurrently": "^7.0.0",
     "cross-env": "^7.0.3",
     "electron-is-dev": "^2.0.0",
+    "nanoid": "^3.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-google-maps": "^9.4.5",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "recompose": "^0.30.0",
     "wait-on": "^6.0.1",
     "web-vitals": "^2.1.4"
   },
