--- a/aeromap/package.json
+++ b/aeromap/package.json
@@ -13,7 +13,6 @@
     "nanoid": "^3.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-google-maps": "^9.4.5",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "wait-on": "^6.0.1",
@@ -28,7 +27,8 @@
     "eject": "react-scripts eject",
     "electron:serve": "concurrently -k \"cross-env BROWSER=none npm start\" \"npm run electron:start\"",
     "electron:build": "npm run build && electron-builder -c.extraMetadata.main=build/main.js",
-    "electron:start": "wait-on tcp:3000 && electron ."
+    "electron:start": "wait-on tcp:3000 && electron .",
+    "test:backend": "jest"
   },
   "build": {
     "extends": null,
