--- a/aeromap/server/package.json
+++ b/aeromap/server/package.json
@@ -7,6 +7,7 @@
     "test": "test"
   },
   "scripts": {
+    "start": "node main.js",
     "test": "jest --verbose",
     "test-detectLeaks": "jest --detectOpenHandles"
   },
