--- a/aeromap/package.json
+++ b/aeromap/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/material": "^5.6.1",
     "@react-google-maps/api": "^2.7.0",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
@@ -12,6 +15,7 @@
     "electron-is-dev": "^2.0.0",
     "nanoid": "^3.3.1",
     "react": "^17.0.2",
+    "react-datetime": "^3.1.1",
     "react-dom": "^17.0.2",
     "react-open-weather": "^1.2.0",
     "react-router-dom": "^6.2.2",
