--- a/aeromap/package.json
+++ b/aeromap/package.json
@@ -15,6 +15,7 @@
     "electron-is-dev": "^2.0.0",
     "nanoid": "^3.3.1",
     "react": "^17.0.2",
+    "react-countup": "^6.2.0",
     "react-datetime": "^3.1.1",
     "react-dom": "^17.0.2",
     "react-open-weather": "^1.2.0",
