--- a/aeromap/package.json
+++ b/aeromap/package.json
@@ -13,6 +13,7 @@
     "concurrently": "^7.0.0",
     "cross-env": "^7.0.3",
     "electron-is-dev": "^2.0.0",
+    "moment": "^2.29.3",
     "nanoid": "^3.3.1",
     "react": "^17.0.2",
     "react-countup": "^6.2.0",
